--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,11 @@
 name: 'Your name here'
 description: 'Provide a description here'
-author: 'Your name or organization here'
+author: 'jlndk'
 inputs:
   milliseconds: # change this
     required: true
     description: 'input description here'
     default: 'default value if applicable'
 runs:
-  using: 'node12'
+  using: 'node14'
   main: 'dist/index.js'
