--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,11 @@
-name: 'Your name here'
-description: 'Provide a description here'
+name: 'github-action-jest'
+description: 'A github action for running jest. With code coverage!'
 author: 'jlndk'
-inputs:
-  milliseconds: # change this
-    required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+# inputs:
+#   milliseconds: # change this
+#     required: true
+#     description: 'input description here'
+#     default: 'default value if applicable'
 runs:
-  using: 'node14'
+  using: 'node12'
   main: 'dist/index.js'
