--- a/package.json
+++ b/package.json
@@ -22,6 +22,16 @@
   ],
   "author": "jlndk",
   "license": "MIT",
+  "lint-staged": {
+    "*.ts": [
+      "yarn run lint --fix"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "dependencies": {
     "@actions/core": "^1.2.6",
     "@actions/github": "^4.0.0"
@@ -37,9 +47,11 @@
     "eslint-plugin-github": "^4.1.1",
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^4.3.8",
     "jest": "^26.6.3",
     "jest-circus": "^26.6.3",
     "js-yaml": "^3.14.0",
+    "lint-staged": "^10.5.3",
     "prettier": "2.2.1",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
