--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,6 +59,6 @@ jobs:
 
       - uses: ./
         with:
-          test-command: yarn test
+          test-command: yarn test:demo
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
