--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "lint": "eslint src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
-    "test": "jest"
+    "test": "jest",
+    "test:demo": "jest --testMatch='**/demo_tests/**/*.spec.ts'"
   },
   "repository": {
     "type": "git",
