--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "js-yaml": "^4.0.0",
     "lint-staged": "^10.5.3",
     "mock-fs": "^4.13.0",
+    "nock": "^13.0.7",
     "prettier": "2.2.1",
     "ts-jest": "^26.5.0",
     "typescript": "^4.1.3"
